Add validation deps